# BigRedButton

./: .gitignore  .pre-commit-config.yaml  BigRedButton.ini  CHANGELOG.md  README.md  environment.yaml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  pip.yml  pytest.yml  release_please.yml
BRB/: ET.py  PushButton.py  _version.py  demultiplex_relacs.py  editdistance.py  email.py  findFinishedFlowCells.py  galaxy.py  getConfig.py  logger.py  misc.py  run.py
tests/: test_demultiplex_relacs.py  test_editdistance.py  test_findFinishedFlowCells.py
