[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = 'BRB'
authors = [
    {name = "Devon P. Ryan"},
    {name = "Bioinfo-Core MPI-IE"}
]
description = "dixitque PI fiat computationēs et facta est computationēs et vidit PI computationēs quod esset bona"
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
  "bioblend >= 1.2",
  "configparser >= 5.3",
  "editdistance >= 0.6",
  "matplotlib >= 3.8",
  "numpy >= 1.26",
  "python-dateutil >= 2.8",
  "pytz >= 2023",
  "pandas >= 2.1",
  "urllib3 >= 2.1",
  "chardet >= 5.2",
  "requests >= 2.31",
  "certifi >= 2023",
  "pyyaml >= 6.0",
  "rich_click >= 1.8.3",
  "dominate >= 2.9.1",
  "tabulate >= 0.9.0",
  "pytest >= 8.2.2"
]

[project.scripts]
BigRedButton = "BRB.run:run_brb"
demultiplex_relacs = "BRB.demultiplex_relacs:main"

[tool.setuptools_scm]

[tool.ruff]
lint.ignore = [
  "E722",
  "F841",
  "E712",
  "E741"
]
